--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <!-- Google Analytics 4 (GA4) -->
     <!-- Replace G-XXXXXXXXXX with your actual Measurement ID -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HWC2NTL2N3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         // Config with placeholder ID
-        gtag('config', 'G-XXXXXXXXXX');
+        gtag('config', 'G-HWC2NTL2N3');
 
         // Helper for App Events
         window.trackEvent = function (eventName, params = {}) {
