feat: review page redesign, timer, deliverables, and UX improvements
- Add 'You Will Unlock' section on landing page (certificate + job options)
- Add 'Job Options from 1100+ Companies' deliverable card on results page
- Redesign Review Page: flat question cards, single accordion, hide correct answers
- Skip review page if all answers correct
- Clear history on new simulation start
- Add simulation timer (MM:SS, blinking colon, 5min idle pause)
- Show bonus indicator only after 2+ correct streak
- Fix duplicate review cards (remove double evaluateStep calls)
- Add max-width 600px + centered layout for desktop
- Constrain sticky CTAs to 600px max-width on desktop

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="root" style="max-width: 600px; margin: 0 auto;"></div>
     <!-- Load the JSX file as a Babel script -->
     <script type="text/babel" src="hr-simulation.jsx"></script>
     <script type="text/babel">
@@ -118,7 +118,7 @@
                 // Example: /?sim=custom_test loads custom_test.json
                 const params = new URLSearchParams(window.location.search);
                 const simId = params.get('sim') || 'simulation_1-5';
-                const jsonPath = `${simId}.json`;
+                const jsonPath = `${simId}.json?t=${Date.now()}`;
 
                 console.log(`Loading simulation from: ${jsonPath}`);
 
